[gd_scene load_steps=8 format=3 uid="uid://fv7lq3fnvbrb"]

[ext_resource type="Texture2D" uid="uid://b5lyswsucyvur" path="res://assets/tiles.png" id="1_o31dl"]
[ext_resource type="Script" uid="uid://bel5p7ulklptq" path="res://scenes/map_preview.gd" id="1_wn4pc"]
[ext_resource type="Script" uid="uid://dxi7mreotgdi" path="res://classes/pan_zoom_camera.gd" id="1_xyrje"]
[ext_resource type="PackedScene" uid="uid://7saafgael53k" path="res://scenes/selection_tool.tscn" id="4_2fjyl"]
[ext_resource type="Script" uid="uid://bw86qbb1n2jab" path="res://classes/map_view_grid.gd" id="4_d3m4o"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_wn4pc"]
texture = ExtResource("1_o31dl")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_xvuvo"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_wn4pc")

[node name="MapPreview" type="SubViewportContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true
script = ExtResource("1_wn4pc")

[node name="SubViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(1440, 960)
render_target_update_mode = 4

[node name="TileMapLayer" type="TileMapLayer" parent="SubViewport"]
unique_name_in_owner = true
self_modulate = Color(0.947199, 0.947199, 0.947199, 1)
tile_set = SubResource("TileSet_xvuvo")
occlusion_enabled = false

[node name="MapViewGrid" type="Node2D" parent="SubViewport"]
script = ExtResource("4_d3m4o")
camera_path = NodePath("../PanZoomCamera")
tilemap_path = NodePath("../TileMapLayer")
grid_color = Color(0.0807833, 0.0807833, 0.0807833, 1)

[node name="SelectionTool" parent="SubViewport" instance=ExtResource("4_2fjyl")]
unique_name_in_owner = true

[node name="PanZoomCamera" type="Camera2D" parent="SubViewport"]
unique_name_in_owner = true
script = ExtResource("1_xyrje")
zoom_factor = 0.05
metadata/_custom_type_script = "uid://dxi7mreotgdi"

[node name="TopLeftInfoBox" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TopLeftInfoBox"]
layout_mode = 2

[node name="BlockPosLabel" type="Label" parent="TopLeftInfoBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
text = "Block : (-48, 314)"

[node name="ChunkPosLabel" type="Label" parent="TopLeftInfoBox/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
text = "Chunk : (-2, 10)"

[node name="Zoom" type="HBoxContainer" parent="TopLeftInfoBox/VBoxContainer"]
layout_mode = 2

[node name="ZoomDecreaseButton" type="Button" parent="TopLeftInfoBox/VBoxContainer/Zoom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "-"

[node name="ZoomLabel" type="Label" parent="TopLeftInfoBox/VBoxContainer/Zoom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_outline_size = 8
text = "100%"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ZoomIncreaseButton" type="Button" parent="TopLeftInfoBox/VBoxContainer/Zoom"]
unique_name_in_owner = true
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
text = "+"

[connection signal="zoom_changed" from="SubViewport/PanZoomCamera" to="." method="_on_pan_zoom_camera_zoom_changed"]
[connection signal="pressed" from="TopLeftInfoBox/VBoxContainer/Zoom/ZoomDecreaseButton" to="." method="_on_zoom_decrease_button_pressed"]
[connection signal="pressed" from="TopLeftInfoBox/VBoxContainer/Zoom/ZoomIncreaseButton" to="." method="_on_zoom_increase_button_pressed"]
